enter/leave matchmaking queue done c:

--- a/frontend/service/components/home/home.html
+++ b/frontend/service/components/home/home.html
@@ -59,8 +59,8 @@
 <!-- 								<div class="mb-3 d-flex flex-column align-items-center">
 -->									<label for="select-ranked" class="form-label ctm-text-light">Choose ranked options</label>
 									<div class="switch w-100">
-										<button class="switch-btn switch-btn-left w-50 mx-1" data-ranked="true">Casual</button>
-										<button class="switch-btn switch-btn-right w-50 mx-1" data-ranked="false">Ranked</button>
+										<button class="switch-btn switch-btn-left w-50 mx-1" data-ranked="false">Casual</button>
+										<button class="switch-btn switch-btn-right w-50 mx-1" data-ranked="true">Ranked</button>
 									</div>
 									<div id="variants-toggle" class="my-2 collapsible">
 										<label for="select-variants" class="form-label ctm-text-light">Want to add more variants?</label>
