--- a/frontend/service/components/chat/styles.css
+++ b/frontend/service/components/chat/styles.css
@@ -170,6 +170,14 @@
 	border-bottom-right-radius: 0;
 }
 
+.message.outdated {
+	background-color: var(--dark) !important;
+	color: var(--light) !important;
+	font-size: 14px;
+	padding: 8px 8px;
+
+}
+
 #chat-body {
 	height: 350px;
 }
