small fix on stats

--- a/frontend/service/components/stats/stats.html
+++ b/frontend/service/components/stats/stats.html
@@ -14,7 +14,7 @@
 				</div>
 				<div class="col-md-6">
 					<h3 class="ctm-text-title text-center">Full History</h3>
-					<div id="full-pong-history" class="p-3 history">
+					<div id="full-pong-history" class="history text-center">
 						<!-- Pong history will be populated here -->
 					</div>
 				</div>
@@ -33,7 +33,7 @@
 				</div>
 				<div class="col-md-6">
 					<h3 class="ctm-text-title text-center">Full History</h3>
-					<div id="full-chess-history" class="p-3 history">
+					<div id="full-chess-history" class="history">
 						<!-- Chess history will be populated here -->
 					</div>
 				</div>
