small update on home btns

--- a/frontend/service/components/home/home.html
+++ b/frontend/service/components/home/home.html
@@ -22,7 +22,7 @@
 							</div>
 							<div id="quick-play-options" class="h-100 flex-column" style="display: none !important;">
 								<div id="play-friend" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play with a friend</div>
-								<div id="play-machine" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play against the machine</div>
+								<div id="play-machine" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play local/against the machine</div>
 							</div>
 							<div id="friend-list" class="h-100 flex-column" style="display: none;">
 								<h5 class="ctm-text-light mb-3">Select a friend to play with:</h5>
@@ -31,7 +31,7 @@
 							</div>
 							<div id="tournament-options" class="h-100 flex-column" style="display: none;">
 								<div id="ongoing-tournaments" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Ongoing Tournaments</div>
-								<div id="new-tournament" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">New Tournament</div>
+								<div id="new-tournament" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Create/edit Tournament</div>
 							</div>
 						</div>
 					</div>
