Logic updated for tournament start to be handled by StartWithAccepted button

--- a/frontend/service/components/tournament/new-tournament.html
+++ b/frontend/service/components/tournament/new-tournament.html
@@ -1,6 +1,6 @@
 <section id="new-tournament-container" class="blinking-neon-frame" style="display: none;">
 	<div class="card ctm-card p-5 ctm-text-light">
-		<!-- <button id="" class="btn cancel-btn position-absolute top-0 end-0 m-2">x</button> -->
+		<button id="" class="btn cancel-btn position-absolute top-0 end-0 m-2">x</button>
 		<h2 class="text-center ctm-text-title">New Tournament</h2>
 		<form id="tournament-form">
 			<div class="mb-3">
@@ -52,7 +52,7 @@
 		</div>
 		<div class="d-flex justify-content-center">
 		  <button id="cancel-tournament-btn" class="btn ctm-btn-danger">Cancel Tournament</button>
-		  <!-- <button id="start-with-accepted-btn" class="btn ctm-btn" disabled>Start With Accepted</button> -->
+		  <button id="start-with-accepted-btn" class="btn ctm-btn" disabled>Start With Accepted</button>
 		</div>
 	  </div>
 	</div>
