ugly but functional tournament brackets

--- a/frontend/service/components/tournament/styles.css
+++ b/frontend/service/components/tournament/styles.css
@@ -23,6 +23,12 @@
 	border-radius: 5px;
 }
 
+.round.open {
+	background-color: var(--transparent-dark);
+	border-radius: 10px;
+	border: 1px solid var(--light);
+}
+
 .match {
 	display: flex;
 	flex-direction: column;
