--- a/frontend/service/components/home/styles.css
+++ b/frontend/service/components/home/styles.css
@@ -64,11 +64,11 @@ img {
 
 
 .overlay {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.459);
     display: none;
     z-index: 50;
