--- a/frontend/service/components/signup/verify-email.html
+++ b/frontend/service/components/signup/verify-email.html
@@ -1,6 +1,6 @@
 <div class="blinking-neon-frame">
 	<div class="card ctm-card p-5">
-		<h3 class="ctm-text-title">Is dangerous to go alone!</h3>
+		<h3 class="ctm-text-title">It's dangerous to go alone!</h3>
 		<p class="ctm-text-light text-center">Take this</p>
 		<div id="verify-btn" class="btn ctm-btn-secondary">
 		</div>
