--- a/frontend/service/components/index/index.html
+++ b/frontend/service/components/index/index.html
@@ -2,16 +2,16 @@
   <div class="greeting-page">
       <div class="neon-frame p-3">
           <div class="ctm-card p-5 d-flex flex-column flex-md-row">
-              <div class="col d-flex flex-column me-4">
-                  <h1 class="ctm-text-title">ft_transcendence</h1>
-                  <h3 class="ctm-text-light mb-5">Welcome, huuman</h3>
+              <div class="col-12 col-md-6 d-flex flex-column me-md-4 mb-4 mb-md-0">
+                  <h1 class="ctm-text-title d-none d-md-block">ft_transcendence</h1> <!-- Hide on mobile -->
+                  <h3 class="ctm-text-light mb-5 text-center text-md-start">Welcome, huuman</h3>
                   <h4 class="ctm-text-light mt-auto" id="neon-text">
-                    <a href="/login" class="nav-link ctm-link">please, log in to start playing</a>
+                  <a href="/login" class="nav-link ctm-link text-center">please, log in to start playing</a>
                   </h4>
               </div>
-              <div class="col d-flex flex-column align-items-center">
+              <div class="col-12 col-md-6 d-flex flex-column align-items-center">
                   <!-- greetings card -->
-                  <div class="tv  position-relative">
+                  <div class="tv position-relative">
                       <canvas id="greeting-bot"></canvas>
                       <canvas id="greeting-light"></canvas>
                   </div>
@@ -20,8 +20,8 @@
       </div>
   </div>
   <!-- Scroll message -->
-  <div class="scroll-message text-center mt-5">
-      <p class="ctm-text-light">Scroll to see a quick resume</p>
+  <div class="scroll-message text-center mt-5"> <!-- Hide on mobile -->
+      <p class="ctm-text-light d-none d-md-block">Scroll to see a quick resume</p>
       <div class="arrow-down">
           <i id="scroll-arrow" class="fas fa-chevron-down"></i>
       </div>
@@ -33,13 +33,13 @@
     <div id="resume-section" class="resume-section mt-5">
       <div class="container">
         <div class="row mb-5 resume-card resume-card--right">
-          <div class="col-md-3">
+          <div class="col-12 col-md-3">
             <img src="../../resources/assets/chat.png" alt="chat preview" class="img-fluid rounded mb-3">
           </div>
-          <div class="col-md-5">
+          <div class="col-12 col-md-5">
             <img src="../../resources/assets/friends.png" alt="friends preview" class="img-fluid rounded mb-3">
           </div>
-          <div class="col-md-4">
+          <div class="col-12 col-md-4">
             <h2 class="ctm-text-title mb-3">Social</h2>
             <p class="ctm-text-light">Make new friends to play with</p>
             <p class="ctm-text-light">Chat with them</p>
@@ -47,27 +47,27 @@
         </div>
         
         <div class="row mb-5 resume-card resume-card--left">
-          <div class="col-md-4 order-md-1">
+          <div class="col-12 col-md-4 order-md-1">
             <h2 class="ctm-text-title mb-3">Play Chess</h2>
             <p class="ctm-text-light">Play with your friends or random</p>
             <p class="ctm-text-light">Choose between classic chess or spicy version</p>
           </div>
-          <div class="col-md-4 order-md-3">
+          <div class="col-12 col-md-4 order-md-3">
             <img src="../../resources/assets/chess.png" alt="chess preview" class="img-fluid rounded mb-3">
           </div>
-          <div class="col-md-4 order-md-2">
+          <div class="col-12 col-md-4 order-md-2">
             <img src="../../resources/assets/chess-variants.png" alt="chess variants preview" class="img-fluid rounded mb-3">
           </div>
         </div>
         
         <div class="row resume-card resume-card--right">
-          <div class="col-md-4">
+          <div class="col-12 col-md-4">
             <img src="https://media.tenor.com/2gyJVMt_L6wAAAAM/pong-video-game.gif" alt="Play Pong" class="img-fluid rounded mb-3">
           </div>
-          <div class="col-md-4">
+          <div class="col-12 col-md-4">
             <img src="../../resources/assets/tournaments.png" alt="tournament preview" class="img-fluid rounded mb-3">
           </div>
-          <div class="col-md-4">
+          <div class="col-12 col-md-4">
             <h2 class="ctm-text-title mb-3">Play Pong</h2>
             <p class="ctm-text-light">Play with a friend, random, or against AI</p>
             <p class="ctm-text-light">Play quick games or tournaments</p>
@@ -76,4 +76,3 @@
       </div>
     </div>
 </div>
-
