--- a/frontend/service/styles.css
+++ b/frontend/service/styles.css
@@ -165,6 +165,7 @@ body::before {
 }
 /* ctm card */
 .ctm-card {
+    max-width: 95vw;
     display: flex;
     flex-direction: column;
     /* align-items: center; */
