--- a/frontend/service/components/login/reset-password.html
+++ b/frontend/service/components/login/reset-password.html
@@ -4,9 +4,9 @@
 		<h2 class="text-center ctm-text-title">Reset password</h2>
 		<form id="reset-pw-form">
 			<div class="mb-3">
-				<label for="password" class="form-label ctm-text-light">New password</label>
+				<label for="password" class="password-field form-label ctm-text-light">New password</label>
 				<input type="password" id="new-password" class="form-control ctm-form mb-2 mb-2" placeholder="New Password">
-				<label for="password" class="form-label ctm-text-light">Confirm password</label>
+				<label for="password" class="password-field form-label ctm-text-light">Confirm password</label>
 				<input type="password" id="confirm-new-password" class="form-control ctm-form mb-2 mb-2" placeholder="Confirm Password">
 			</div>
 			<div class="d-flex justify-content-center">
