--- a/frontend/service/components/profile/profile.html
+++ b/frontend/service/components/profile/profile.html
@@ -93,7 +93,7 @@
             </div>
             <div class="modal-body">
                 <p>Password is required to change username:</p>
-                <input type="password" id="confirm-changes-password" class="form-control ctm-form" placeholder="Enter your password">
+                <input type="password" id="confirm-changes-password" class="password-field form-control ctm-form" placeholder="Enter your password">
             </div>
             <div class="modal-footer text-center">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
