--- a/frontend/service/components/signup/signup.html
+++ b/frontend/service/components/signup/signup.html
@@ -3,22 +3,22 @@
     <div class="card ctm-card p-5">
         <button id="cancel-signup" class="btn cancel-btn position-absolute top-0 end-0 m-2">x</button>
         <h2 class="text-center ctm-text-title">Register</h2>
-        <form id="register-form"> <!-- currently Im not using this id -->
+        <form id="register-form">
             <div class="mb-3">
-                <label for="username" class="form-label ctm-text-light">Username</label>
-                <input type="text" class="form-control ctm-form" id="new-username" required>
+                <label for="new-username" class="form-label ctm-text-light">Username</label>
+                <input type="text" class="form-control ctm-form" id="new-username" required autocomplete="username">
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label ctm-text-light">Email</label>
-                <input type="email" class="form-control ctm-form" id="email" required>
+                <input type="email" class="form-control ctm-form" id="email" required autocomplete="email">
             </div>
             <div class="mb-3">
-                <label for="password" class="form-label ctm-text-light">Password</label>
-                <input type="password" class="form-control ctm-form" id="new-password" required>
+                <label for="new-password" class="form-label ctm-text-light">Password</label>
+                <input type="password" class="password-field form-control ctm-form" id="new-password" required autocomplete="new-password">
             </div>
             <div class="mb-3">
                 <label for="confirm-password" class="form-label ctm-text-light">Confirm Password</label>
-                <input type="password" class="form-control ctm-form" id="confirm-password" required>
+                <input type="password" class="form-control ctm-form password-field" id="confirm-password" required autocomplete="new-password">
             </div>
             <div class="d-flex justify-content-center">
                 <button type="submit" class="btn ctm-btn" id="register">Register</button>
