better otp handling

--- a/frontend/service/components/home/home.html
+++ b/frontend/service/components/home/home.html
@@ -72,6 +72,7 @@
 											<div class="variant-btn" data-variant="960">960</div>
 										</div>
 									</div>
+									<div id='ranked-variants' class="collapsible ctm-text-light mb-2">Ranked games are always in classic mode</div>
 								<!-- </div> -->
 								<div id="start-queue" class="mt-auto btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Enter queue</div>
 							</div>
