--- a/frontend/service/components/login/login.html
+++ b/frontend/service/components/login/login.html
@@ -43,22 +43,31 @@
     </div> <!-- this closes the reset card -->
 </div>
 
-
-<!-- we dont use this modal now -->
-<!-- <div class="modal fade" id="user-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel">User does not exist</h5>
-				<button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
-			</div>
-			<div class="modal-body">
-				You don't have an account?
-				<a href="/signup" class="ctm-text-light ctm-link">Sign up</a>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn ctm-btn" data-bs-dismiss="modal">Got it!</button>
-			</div>
-		</div>
-	</div>
-</div> -->
+<div class="modal fade" id="otp-modal" tabindex="-1" aria-labelledby="otpModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title ctm-text-title" id="otpModalLabel">OTP Code</h5>
+                <button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
+            </div>
+            <div class="modal-body">
+                <form id="otp-form">
+                    <div class="mb-3 d-flex flex-column justify-content-center">
+                        <label for="otp-code" class=" text-center form-label ctm-text-light"><h5>Please, enter your OTP Code: </h5></label>
+                        <div class="d-flex justify-content-center my-3">
+                            <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
+                            <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
+                            <input type="text" class="form-control ctm-form otp-input me-3" maxlength="1" required>
+                            <input type="text" class="form-control ctm-form otp-input ms-3" maxlength="1" required>
+                            <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
+                            <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <button type="submit" class="btn ctm-btn">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
