--- a/frontend/service/components/settings/settings.html
+++ b/frontend/service/components/settings/settings.html
@@ -151,9 +151,16 @@
             <div class="modal-body">
                 <p>Please enter your password to save changes:</p>
                 <input type="password" id="confirm-changes-password" class="password-field form-control ctm-form" placeholder="Enter your password">
-                <div id="otp-form" class="mt-3" style="display: none;">
+                <div id="otp-form" class="mt-3 otp-form" style="display: none;">
                     <p>OTP is required to deactivate the 2FA</p>
-                    <input type="password" id="otp-input" class="password-field form-control ctm-form w-50" placeholder="Enter your OTP code">
+                    <div class="d-flex justify-content-center my-4">
+                        <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
+                        <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
+                        <input type="text" class="form-control ctm-form otp-input me-3" maxlength="1" required>
+                        <input type="text" class="form-control ctm-form otp-input ms-3" maxlength="1" required>
+                        <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
+                        <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
+                    </div>
                 </div>
             </div>
             <div class="modal-footer text-center">
