small fix on forms

--- a/frontend/service/components/friends/friends.html
+++ b/frontend/service/components/friends/friends.html
@@ -28,7 +28,7 @@
                     <div id="search-form-container">
                         <form id="search-form" >
                             <div class="input-group">
-                                <input type="text" class="form-control ctm-form" placeholder="Search by username" aria-label="Search by username">
+                                <input type="text" class="form-control ctm-form anexed" placeholder="Search by username" aria-label="Search by username">
                             </div>
                         </form>
                         <button id="toggle-search" class="btn ctm-btn-secondary" aria-label="Open friend request form">
