--- a/frontend/service/components/login/login.html
+++ b/frontend/service/components/login/login.html
@@ -53,7 +53,7 @@
             <div class="modal-body">
                 <form id="otp-form">
                     <div class="mb-3 d-flex flex-column justify-content-center">
-                        <label for="otp-code" class=" text-center form-label ctm-text-light"><h5>Please, enter your OTP Code: </h5></label>
+                        <label for="otp-code" class=" ms-1 form-label ctm-text-light"><h5>Please, enter your OTP Code: </h5></label>
                         <div class="d-flex justify-content-center my-3">
                             <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
                             <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
@@ -63,7 +63,7 @@
                             <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
                         </div>
                     </div>
-                    <div class="d-flex justify-content-center">
+                    <div class="modal-footer">
                         <button type="submit" class="btn ctm-btn">Submit</button>
                     </div>
                 </form>
