--- a/frontend/service/components/chat/chat.html
+++ b/frontend/service/components/chat/chat.html
@@ -42,7 +42,7 @@
         </div>
         <form id="chat-form" class="p-2">
             <div class="input-group">
-                <input type="text" id="message-input" class="form-control" placeholder="Type a message">
+                <input type="text" id="message-input" class="form-control ctm-form anexed" placeholder="Type a message">
                 <button type="submit" id="send-btn" class="btn send-btn">
                     <i class="fas fa-paper-plane"></i>
                 </button>
