--- a/frontend/service/components/settings/settings.html
+++ b/frontend/service/components/settings/settings.html
@@ -149,11 +149,11 @@
                 <button type="button" class="close-modal close-qr-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
             </div>
             <div class="modal-body">
-                <p>Please enter your password to save changes:</p>
-                <input type="password" id="confirm-changes-password" class="password-field form-control ctm-form" placeholder="Enter your password">
+                <p class="ms-2">Please enter your password to save changes:</p>
+                <input type="password" id="confirm-changes-password" class="password-field form-control ctm-form mx-2" placeholder="Enter your password">
                 <div id="otp-form" class="mt-3 otp-form" style="display: none;">
-                    <p>OTP is required to deactivate the 2FA</p>
-                    <div class="d-flex justify-content-center my-4">
+                    <p class="ms-2">OTP is required to deactivate the 2FA</p>
+                    <div class="d-flex justify-content-center my-2 w-100">
                         <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
                         <input type="text" class="form-control ctm-form otp-input" maxlength="1" required>
                         <input type="text" class="form-control ctm-form otp-input me-3" maxlength="1" required>
