--- a/frontend/service/components/chat/styles.css
+++ b/frontend/service/components/chat/styles.css
@@ -154,6 +154,7 @@
 	padding: 8px 12px;
 	border-radius: 15px;
 	word-wrap: break-word; /* pprevents overflow */
+	overflow-wrap: anywhere;
 	align-self: flex-start;
 }
 
