--- a/frontend/service/components/tournament/new-tournament.html
+++ b/frontend/service/components/tournament/new-tournament.html
@@ -51,8 +51,8 @@
 		  <button id="send-replacement-btn" class="btn ctm-btn w-100 mb-3" disabled>Send Invitations</button>
 		</div>
 		<div class="d-flex justify-content-center">
-		  <button id="cancel-tournament-btn" class="btn ctm-btn-danger">Cancel Tournament</button>
-		  <button id="start-with-accepted-btn" class="btn ctm-btn" disabled>Start With Accepted</button>
+		  <button id="cancel-tournament-btn" class="btn ctm-btn-danger me-1">Cancel Tournament</button>
+		  <button id="start-with-accepted-btn" class="btn ctm-btn ms-1" disabled>Start With Accepted</button>
 		</div>
 	  </div>
 	</div>
