small fix on pong menu display

--- a/frontend/service/components/pong/pong.html
+++ b/frontend/service/components/pong/pong.html
@@ -1,6 +1,6 @@
 
     <!-- Customization Menu -->
-    <div id="customizationMenu" class="container p-5">
+    <div id="customizationMenu" class="container p-5 hidden">
         <h2 class="ctm-text-title text-center mb-4">Game Customization</h2>
         <form id="customizationForm">
             <div class="row g-4">
@@ -105,8 +105,8 @@
 
     <!-- Game Board Container (Hidden Initially) -->
     <div id="board-container" class="mt-4">
-        <div class="blinking-neon-frame p-3" id="neonFrame" hidden>
-            <canvas id="board" hidden></canvas>  <!-- Initially hidden -->
+        <div class="blinking-neon-frame p-3" id="neonFrame">
+            <canvas id="board"></canvas>  <!-- Initially hidden -->
         </div>
     </div>
 
