fixed the mathmaking modal

--- a/frontend/service/components/home/home.html
+++ b/frontend/service/components/home/home.html
@@ -121,6 +121,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title ctm-text-title" id="waitGameLabel">Matchmaking</h5>
+				<div type="button" id="dismiss" data-bs-dismiss="modal" aria-label="Close"></div>
 				<button id="close-matchmaking-modal" type="button" class="close-modal" aria-label="Close">x</button>
 			</div>
 			<div class="modal-body">
