--- a/frontend/service/components/tournament/tournament.html
+++ b/frontend/service/components/tournament/tournament.html
@@ -1,9 +1,8 @@
-<div id="tournaments" class="neon-frame p-4 d-flex flex-column justify-content-center align-items-center">
-    <div class="ctm-bg-dark">
-
-        <div class="switch">
-            <button class="switch-btn active switch-btn-left w-50 mx-1" data-ranked="false">Ongoing</button>
-            <button class="switch-btn switch-btn-right w-50 mx-1" data-ranked="true">Finished</button>
+<div id="tournaments" class="neon-frame p-4 ">
+    <div class="ctm-bg-dark card p-4 d-flex flex-column justify-content-center align-items-center">
+        <div class="switch mb-5">
+            <button class="switch-btn active switch-btn-left w-50 py-2 mx-1" data-ranked="false">Ongoing</button>
+            <button class="switch-btn switch-btn-right w-50 py-2 mx-1" data-ranked="true">Finished</button>
         </div>
         <div id="ongoing-container" class="collapsible show"></div>
         <div id="finished-container" class="collapsible"></div>
